Prevent linebreak in form header

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -391,6 +391,8 @@ small {
       @include heading($color-pink-medium, $color-pink-dark);
       margin-bottom: 130px;
       text-align: center;
+      margin-left: -40px;
+      margin-right: -40px;
       @include mobile-content() {
         margin-bottom: 50px;
       }
